--- a/index.html
+++ b/index.html
@@ -6,12 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Website</title>
 
-    <!-- cuscom-style-link -->
+    <!-- cuscom-style-links-->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Raleway:wght@100&family=Ubuntu:ital@1&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
     <!---------------------------- Nav-section ---------------------------------->
+    <nav class="nav">
+        <div class="nav-menu flex-row">
+            <div class="nav-brand">
+                <a href="#">Bloger</a>
+            </div>
+            <div class="nav-item">
+                <a href="">Home</a>
+                <a href="">Catagory</a>
+                <a href="">Archive</a>
+                <a href="">Pages</a>
+                <a href="">Contact Us</a>
+            </div>
+            <div class="icon-item">
+                <a href=""><i class="fab fa-facebook-f"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-twitter"></i></a>
+                <a href=""><i class="fab fa-youtube"></i></a>
+            </div>
+        </div>
+    </nav>
     <!--x---x---x---x---x----x---- Nav-section ---x----x-----x----x-----x----x--->
     
+
+
+
+
+
+
+
+
+
+    <!----------------------------custom--js------------------------------------>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
