--- a/index.html
+++ b/index.html
@@ -38,7 +38,16 @@
         </div>
     </nav>
     <!--x---x---x---x---x----x---- Nav-section ---x----x-----x----x-----x----x--->
-    
+    <header id="header">
+        <div class="header-text">
+            <h3>Tour & Travels</h3>
+            <h1>Amazing Place On The Earth</h1>
+            <button class="website-button"><a href="">Explore</a></button>
+
+
+            
+        </div>
+    </header>
 
 
 
