--- a/index.html
+++ b/index.html
@@ -264,8 +264,56 @@
 
 
 
+ <!-----------------------------footer-section---------------------------------------->
+
+ <footer>
+    <div class="about-us">
+        <span class="tomato"> <h1>About Us</h1> </span>
+        <p>If You Need Any Help From Us Then You Can Emial Us or Call Our <a href=""></a>  <span class="tomato">Customer Care</span></a>  We Are Available 24/7 For you. Thanks For Visit Our Website. </p>
+    </div>
+    <div class="newsteller-part">
+        <span class="tomato"><h1>NewsTeller</h1></span>
+        <p>Stay Update With Our Letest</p>
+        <input class="email-feild footer-email" type="email" required placeholder="Email"> <a href=""><i class="fas fa-location-arrow"></i></a>
+    </div>
+    <div class="insta-part">
+        <span class="tomato"><h1>Instagram</h1></span>
+        <div class="insta-part-img">
+        <img src="/images/instagram/thumb-card3.png" alt="">
+        <img src="/images/instagram/thumb-card4.png" alt="">
+        <img src="/images/instagram/thumb-card5.png" alt="">
+        <img src="/images/instagram/thumb-card6.png" alt="">
+        <img src="/images/instagram/thumb-card7.png" alt="">
+        <img src="/images/instagram/thumb-card8.png" alt="">
+    </div>
+</div>
+
+<div class="follow-us-section">
+    <span class="tomato"> <h1>Follow Us</h1></span>
+    <p>Connect With Us</p>
+    <div class="icon-item">
+        <a href=""><i class="fab fa-facebook-f footer-icon"></i></a>
+        <a href=""><i class="fab fa-instagram footer-icon"></i></a>
+        <a href=""><i class="fab fa-twitter footer-icon"></i></a>
+        <a href=""><i class="fab fa-youtube footer-icon"></i></a>
+    </div>
+</div>
+
+</footer>
+<div class="footer-tag">
+    <p> Copyright ©2022 All rights reserved | Made By <span class="tomato"><strong>ABIR RAHAMAN</strong></span> </p>
+
+</div> 
+
+
+ <!-----x-----x-----x-----x-----footer-section-----x-----x------x------x------x------>
+
+
+
+
+
    
-    <!----------------------------custom--js------------------------------------>
+ <!----------------------------fooer-section------------------------------------>
     <script src="js/main.js"></script>
 </body>
 
