--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Raleway:wght@100&family=Ubuntu:ital@1&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/favourite.png" type="image/gif" sizes="16x16">
 
 </head>
 
