--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
        <div class="card-section">
            <div class="card-item">
                <div class="card-img">
-                   <img class="image-width" src="/images/Blog-post/post-1.jpg" alt="">
+                   <img class="image-width" src="images/Blog-post/post-1.jpg" alt="">
                </div>
                 <div class="card-text">
                     <h2> Lodon Has Fallen Down Over The Whole World.</h2>
@@ -70,7 +70,7 @@
             </div>
            <div class="card-item">
               <div class="card-img">
-                    <img src="/images/Blog-post/post-5.png" alt="">
+                    <img src="images/Blog-post/post-5.png" alt="">
               </div>
               <div class="card-text">
                     <h2>Lodon Has Fallen Down Over The Whole World. </h2>
@@ -80,7 +80,7 @@
            </div>
            <div class="card-item">
               <div class="card-img">
-                  <img src="/images/Blog-post/post-3.jpg" alt="">
+                  <img src="images/Blog-post/post-3.jpg" alt="">
               </div>
               <div class="card-text">
                 <h2>Lodon Has Fallen Down Over The Whole World. </h2>
@@ -280,12 +280,12 @@
     <div class="insta-part">
         <span class="tomato"><h1>Instagram</h1></span>
         <div class="insta-part-img">
-        <img src="/images/instagram/thumb-card3.png" alt="">
-        <img src="/images/instagram/thumb-card4.png" alt="">
-        <img src="/images/instagram/thumb-card5.png" alt="">
-        <img src="/images/instagram/thumb-card6.png" alt="">
-        <img src="/images/instagram/thumb-card7.png" alt="">
-        <img src="/images/instagram/thumb-card8.png" alt="">
+        <img src="images/instagram/thumb-card3.png" alt="">
+        <img src="images/instagram/thumb-card4.png" alt="">
+        <img src="images/instagram/thumb-card5.png" alt="">
+        <img src="images/instagram/thumb-card6.png" alt="">
+        <img src="images/instagram/thumb-card7.png" alt="">
+        <img src="images/instagram/thumb-card8.png" alt="">
     </div>
 </div>
 
